# Report-Generator

report_generator/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py
report_generator/.github/: pull_request_template.md
report_generator/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
report_generator/.github/workflows/: ci-cd.yml
report_generator/docs/: api.md  configuration.md  development.md  index.md  installation.md  usage.md
report_generator/src/report_generator/: __init__.py  app.py  config.py  file_utils.py  gemini_utils.py  report_utils.py
report_generator/tests/: __init__.py  test_report_generator.py
